# anderson-crm

./: .gitignore  BUSINESS_OPPORTUNITIES.md  EFFICIENCY_REPORT.md  app.js  index.html  style.css
backend/: README.md  pyproject.toml
backend/app/: database.py  main.py  models.py
frontend/: .env  index.html  package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: OpportunityCard.tsx  OpportunityForm.tsx  StatsCard.tsx
